# aiogram-template

./: .env.dist  .gitignore  Makefile  pyproject.toml
deploy/: Dockerfile  docker-compose.yml  install_docker.sh
telegram_bot/: __main__.py  loader.py
telegram_bot/data/: config.py
telegram_bot/handlers/errors/: error_handler.py
telegram_bot/handlers/users/: echo.py  help.py  start.py
telegram_bot/utils/: notify_admins.py
telegram_bot/utils/redis/: consts.py
