[tool.poetry]
name = "Telegram-bot-template"
version = "0.1.0"
description = "Template telegram bot from infernal agency"
authors = ["KilleryStark <krutikovily@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.4"
aiogram = "^2.22.2"
aiohttp = "^3.8.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
